safe args exchange improved, username passed, user profile picture tested

--- a/PongGame/app/src/main/res/layout/item_view.xml
+++ b/PongGame/app/src/main/res/layout/item_view.xml
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/user_nickname"
+            android:id="@+id/username_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -49,7 +49,7 @@
             android:layout_margin="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintStart_toEndOf="@id/user_image"
-            app:layout_constraintTop_toBottomOf="@id/user_nickname" />
+            app:layout_constraintTop_toBottomOf="@id/username_text_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
