--- a/PongGame/app/src/main/res/layout/fragment_login.xml
+++ b/PongGame/app/src/main/res/layout/fragment_login.xml
@@ -35,7 +35,7 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="300dp"
-        android:hint="Username"
+        android:hint="Email"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
