--- a/PongGame/app/src/main/res/layout/fragment_menu.xml
+++ b/PongGame/app/src/main/res/layout/fragment_menu.xml
@@ -101,11 +101,11 @@
         app:layout_constraintTop_toBottomOf="@id/ranking_list_button" />
 
     <Button
-        android:id="@+id/log_out_button"
+        android:id="@+id/profile_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="180dp"
-        android:text="Log Out"
+        android:text="My profile"
         app:cornerRadius="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
