--- a/PongGame/app/src/main/res/layout/fragment_login.xml
+++ b/PongGame/app/src/main/res/layout/fragment_login.xml
@@ -93,11 +93,12 @@
         android:id="@+id/signup_button"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:background="@android:color/transparent"
         android:text="Sign up"
         android:textColor="@color/purple_700"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/not_registered_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
