--- a/PongGame/app/src/main/res/layout/fragment_user_profile.xml
+++ b/PongGame/app/src/main/res/layout/fragment_user_profile.xml
@@ -94,15 +94,27 @@
         app:layout_constraintTop_toBottomOf="@id/user_email" />
 
     <Button
+        android:id="@+id/update_profile_button"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="Update profile"
+        app:cornerRadius="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/user_score" />
+
+    <Button
         android:id="@+id/log_out_button"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="104dp"
         android:text="Log out"
         app:cornerRadius="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_username" />
+        app:layout_constraintTop_toBottomOf="@id/user_score" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
