--- a/PongGame/app/src/main/res/navigation/nav_graph.xml
+++ b/PongGame/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/menuFragment"
-        android:name="com.example.ponggame.MenuFragment"
+        android:name="com.example.ponggame.fragments.MenuFragment"
         android:label="fragment_menu"
         tools:layout="@layout/fragment_menu" >
         <action
@@ -16,10 +16,13 @@
         <action
             android:id="@+id/action_menuFragment_to_userProfileFragment"
             app:destination="@id/userProfileFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_pongActivity"
+            app:destination="@id/pongActivity" />
     </fragment>
     <fragment
         android:id="@+id/rankingListFragment"
-        android:name="com.example.ponggame.RankingListFragment"
+        android:name="com.example.ponggame.fragments.RankingListFragment"
         android:label="fragment_ranking_list"
         tools:layout="@layout/fragment_ranking_list" >
         <action
@@ -28,7 +31,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.ponggame.LoginFragment"
+        android:name="com.example.ponggame.fragments.LoginFragment"
         android:label="LoginFragment" >
         <action
             android:id="@+id/action_loginFragment_to_menuFragment"
@@ -39,7 +42,7 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.example.ponggame.RegisterFragment"
+        android:name="com.example.ponggame.fragments.RegisterFragment"
         android:label="fragment_register"
         tools:layout="@layout/fragment_register" >
         <action
@@ -48,11 +51,15 @@
     </fragment>
     <fragment
         android:id="@+id/userProfileFragment"
-        android:name="com.example.ponggame.UserProfileFragment"
+        android:name="com.example.ponggame.fragments.UserProfileFragment"
         android:label="fragment_userProfile"
         tools:layout="@layout/fragment_user_profile" >
         <action
             android:id="@+id/action_userProfileFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
+    <activity
+        android:id="@+id/pongActivity"
+        android:name="com.example.ponggame.game.ui.PongActivity"
+        android:label="PongActivity" />
 </navigation>
