--- a/PongGame/app/src/main/res/values/colors.xml
+++ b/PongGame/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="black_overlay">#24000000</color>
+    <color name="table_color">#000000</color>
+    <color name="player_color">#FFFFFF</color>
+    <color name="opponent_color">#FFFFFF</color>
+    <color name="ball_color">#fafafa</color>
 </resources>
