--- a/PongGame/app/src/main/res/layout/activity_pong.xml
+++ b/PongGame/app/src/main/res/layout/activity_pong.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pong_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -25,12 +25,12 @@
         android:id="@+id/tvScoreOpponent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:text="Opponent"
-        android:textStyle="bold"
-        android:textColor="#fff"
         android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
+        android:text="Opponent"
+        android:textColor="#fff"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,12 +38,12 @@
         android:id="@+id/tvScorePlayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Player"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:textColor="#fff"
-        android:layout_marginBottom="50dp"
         android:layout_marginStart="30dp"
+        android:layout_marginBottom="50dp"
+        android:text="Player"
+        android:textColor="#fff"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -63,5 +63,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.664" />
+
+    <TextView
+        android:id="@+id/main_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#fff"
+        android:textSize="45sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
