--- a/PongGame/app/src/main/res/layout/activity_pong.xml
+++ b/PongGame/app/src/main/res/layout/activity_pong.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
-        android:text="Opponent"
+        android:text=""
         android:textColor="#fff"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="50dp"
-        android:text="Player"
+        android:text=""
         android:textColor="#fff"
         android:textSize="25sp"
         android:textStyle="bold"
