--- a/PongGame/app/src/main/res/layout/fragment_ranking_list.xml
+++ b/PongGame/app/src/main/res/layout/fragment_ranking_list.xml
@@ -8,7 +8,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ranking_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:clipToPadding="false"
         android:padding="16dp"
         tools:listitem="@layout/item_view" />
