profile image fixed

--- a/PongGame/app/src/main/res/layout/fragment_menu.xml
+++ b/PongGame/app/src/main/res/layout/fragment_menu.xml
@@ -28,7 +28,9 @@
                 android:id="@+id/user_image"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:src="@drawable/ic_user_150"
+                android:src="@drawable/ic_user_150_2"
+                app:civ_border_width="1dp"
+                app:civ_border_color="#FF000000"
                 android:layout_marginLeft="20dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
