--- a/PongGame/app/src/main/res/layout/item_view.xml
+++ b/PongGame/app/src/main/res/layout/item_view.xml
@@ -23,7 +23,9 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="5dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_user_150"
+            android:src="@drawable/ic_user_150_2"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#FF000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/user_ranking_position"
             app:layout_constraintTop_toTopOf="parent"
