--- a/PongGame/app/src/main/res/layout/fragment_register.xml
+++ b/PongGame/app/src/main/res/layout/fragment_register.xml
@@ -20,16 +20,18 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image_icon_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_user_150"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerInParent="true"
             android:importantForAccessibility="no"
-            android:scaleType="centerCrop"
+            android:src="@drawable/ic_user_150_2"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#FF000000"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+             />
 
         <ImageButton
             android:id="@+id/add_profile_image_button"
@@ -39,10 +41,10 @@
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.617"
+            app:layout_constraintHorizontal_bias="0.709"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.705"
+            app:layout_constraintVertical_bias="0.915"
             app:srcCompat="@drawable/ic_add_circle_35"
             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -124,10 +126,11 @@
         android:id="@+id/register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="48dp"
         android:text="Register"
         app:cornerRadius="24dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/confirm_password_register" />
 
