--- a/PongGame/app/src/main/res/layout/fragment_user_profile.xml
+++ b/PongGame/app/src/main/res/layout/fragment_user_profile.xml
@@ -20,11 +20,13 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_user_150"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_user_150_2"
             android:importantForAccessibility="no"
             android:scaleType="centerCrop"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#FF000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
