--- a/PongGame/app/src/main/res/layout/fragment_menu.xml
+++ b/PongGame/app/src/main/res/layout/fragment_menu.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/user_image"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:src="@drawable/ic_user_150_2"
+                android:src="@drawable/user_default_image"
                 app:civ_border_width="1dp"
                 app:civ_border_color="#FF000000"
                 android:layout_marginLeft="20dp"
