--- a/PongGame/app/src/main/res/layout/fragment_register.xml
+++ b/PongGame/app/src/main/res/layout/fragment_register.xml
@@ -24,7 +24,7 @@
             android:layout_height="200dp"
             android:layout_centerInParent="true"
             android:importantForAccessibility="no"
-            android:src="@drawable/ic_user_150_2"
+            android:src="@drawable/user_default_image"
             app:civ_border_width="1dp"
             app:civ_border_color="#FF000000"
             app:layout_constraintBottom_toBottomOf="parent"
