--- a/PongGame/app/src/main/res/layout/fragment_user_profile.xml
+++ b/PongGame/app/src/main/res/layout/fragment_user_profile.xml
@@ -22,7 +22,7 @@
             android:id="@+id/profile_image_icon"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/ic_user_150_2"
+            android:src="@drawable/user_default_image"
             android:importantForAccessibility="no"
             android:scaleType="centerCrop"
             app:civ_border_width="1dp"
