--- a/PongGame/app/src/main/res/layout/item_view.xml
+++ b/PongGame/app/src/main/res/layout/item_view.xml
@@ -23,7 +23,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="5dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_user_150_2"
+            android:src="@drawable/user_default_image"
             app:civ_border_width="1dp"
             app:civ_border_color="#FF000000"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -33,25 +33,25 @@
 
         <TextView
             android:id="@+id/username_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_marginStart="44dp"
+            android:layout_width="117dp"
+            android:layout_height="37dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             android:text="Username"
+            android:textSize="60px"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintStart_toEndOf="@id/user_image"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/user_points"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="60dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="4dp"
             android:text="Score"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="50px"
             app:layout_constraintStart_toEndOf="@id/user_image"
             app:layout_constraintTop_toBottomOf="@id/username_text_view" />
 
