--- a/PongGame/app/src/main/res/layout/fragment_user_profile.xml
+++ b/PongGame/app/src/main/res/layout/fragment_user_profile.xml
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="112dp"
-        android:text="Score"
+        android:text="Total score"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_email" />
 
